<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@mipmap/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@mipmap/ic_favorite_black_24dp"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@mipmap/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@mipmap/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@mipmap/ic_more_horiz_black_24dp"
        android:title="@string/title_more" />

</menu>
